Fix alignment of images.

--- a/reactclickgame/src/components/Wrapper/Wrapper.css
+++ b/reactclickgame/src/components/Wrapper/Wrapper.css
@@ -5,8 +5,6 @@
   display: flex;
   width: 100%;
   flex-flow: row wrap;
-/*  justify-content: space-around;*/
-  align-content: flex-start;
   overflow: auto;
 }
 
@@ -22,4 +20,13 @@
 
 .jumbotron {
 	background-color: white;
+}
+
+.characters {
+  display: flex;
+  flex-flow: row wrap;
+  width: 65%;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 10px;
 }
